Added profile for Piranha
Note Piranha needs JDK 16 to run, but OmniFaces can be compiled with JDK
11.

Signed-off-by: arjantijms <arjan.tijms@gmail.com>